# beatgrid

./: .gitmodules  CMakeLists.txt  operators.txt  watch  watch-web
cmake/: linux.cmake
src/: CMakeLists.txt  assets.c  assets.h  audio_callback.c  audio_callback.h  grid.c  grid.h  history.c  history.h  main.c  spike_detector.c  spike_detector.h  ufa.c  ufa.h  ufa.js
src/emscripten/: shell.js
src/nodes/: arithmetic.c  io.c  oscillators.c  wiring.c
src/operators/: generators.c
src/scenes/: main.c
